--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,11 +16,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            form_login:
-                login_path: app_login
-                check_path: app_login
-                enable_csrf: true
-                default_target_path: app_home
+            # form_login:
+            #     login_path: app_login
+            #     check_path: app_login
+            #     enable_csrf: true
+                # default_target_path: app_home
             logout:
                 path: app_logout
                 target: app_login   
@@ -34,8 +34,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/$, roles: PUBLIC_ACCESS } # juste le home qui est public
+        - { path: ^/login, roles: PUBLIC_ACCESS } # la page d'autehntification
+        - { path: ^/register, roles: PUBLIC_ACCESS } #same
+        - { path: ^/admin, roles: PUBLIC_ACCESS } #ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
 
 when@test:
     security:
