--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,9 +33,13 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+    access_control:    
+        - { path: ^/$, roles: PUBLIC_ACCESS } # juste le home qui est public
+        - { path: ^/login, roles: PUBLIC_ACCESS } # la page d'autehntification
+        - { path: ^/register, roles: PUBLIC_ACCESS } #same
+        - { path: ^/admin, roles: PUBLIC_ACCESS } #ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
+
 
 when@test:
     security:
