--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@symfony/ux-react": "^2.23.0",
         "prop-types": "^15.8.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
     }
 }
