--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,50 +2,54 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
+        # used to reload the user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
                 property: email
+
     firewalls:
+        # Définit les règles pour le profiler, les fichiers statiques et les ressources de débogage
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        # Sécurise l'accès principal de l'application
         main:
             lazy: true
             provider: app_user_provider
+
+            # Configuration du formulaire de connexion
             form_login:
-                login_path: app_login
-                check_path: app_login
-                enable_csrf: true
-                default_target_path: app_home
+                login_path: app_login        # La route pour afficher le formulaire de connexion
+                check_path: app_login        # La route pour envoyer les informations du formulaire de connexion
+                enable_csrf: true           # Activation de la protection CSRF pour le formulaire
+                default_target_path: app_home # Redirection après une connexion réussie vers la page d'accueil
+
+            # Configuration de la déconnexion
             logout:
-                path: app_logout
-                target: app_login   
+                path: app_logout              # Route pour la déconnexion
+                target: app_login             # Redirection après une déconnexion réussie
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
+            # Optionnel : activer l'impersonnalisation des utilisateurs
             # switch_user: true
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+    # Contrôle d'accès pour certaines sections du site
+    # La première règle qui correspond est appliquée
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }  # Exemple d'accès aux pages admin seulement pour ROLE_ADMIN
+        - { path: ^/profile, roles: ROLE_USER }  # Exemple d'accès aux pages de profil seulement pour ROLE_USER
 
+# Configuration spécifique pour les tests
 when@test:
     security:
         password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
+            # Réduction du coût de génération des hachages de mot de passe pour les tests afin d'améliorer la performance
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
                 algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+                cost: 4  # La valeur la plus faible pour bcrypt
+                time_cost: 3  # La valeur la plus faible pour argon
+                memory_cost: 10 # La valeur la plus faible pour argon
