--- a/config/routes/security.yaml
+++ b/config/routes/security.yaml
@@ -1,3 +1,11 @@
 _security_logout:
     resource: security.route_loader.logout
     type: service
+
+security:
+    firewalls:
+        main:
+            json_login:
+                check_path: api_login
+                username_path: email
+                password_path: password
