--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,55 +1,45 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    # Définition du provider utilisateur (via l'entité User)
     providers:
-        # used to reload the user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
                 property: email
 
     firewalls:
-        # Définit les règles pour le profiler, les fichiers statiques et les ressources de débogage
+        # Firewall pour le profiler, les fichiers statiques, etc.
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        # Sécurise l'accès principal de l'application
-        main:
-            lazy: true
-            provider: app_user_provider
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-            # Configuration du formulaire de connexion
-            form_login:
-                login_path: app_login        # La route pour afficher le formulaire de connexion
-                check_path: app_login        # La route pour envoyer les informations du formulaire de connexion
-                enable_csrf: true           # Activation de la protection CSRF pour le formulaire
-                default_target_path: app_home # Redirection après une connexion réussie vers la page d'accueil
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
 
-            # Configuration de la déconnexion
-            logout:
-                path: app_logout              # Route pour la déconnexion
-                target: app_login             # Redirection après une déconnexion réussie
-
-            # Optionnel : activer l'impersonnalisation des utilisateurs
-            # switch_user: true
-
-    # Contrôle d'accès pour certaines sections du site
-    # La première règle qui correspond est appliquée
+    # Règles d'accès aux différentes zones de l'application
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }  # Exemple d'accès aux pages admin seulement pour ROLE_ADMIN
-        - { path: ^/profile, roles: ROLE_USER }  # Exemple d'accès aux pages de profil seulement pour ROLE_USER
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/api, roles: ROLE_USER }
 
-# Configuration spécifique pour les tests
+# Configuration spécifique pour l'environnement de test
 when@test:
     security:
         password_hashers:
-            # Réduction du coût de génération des hachages de mot de passe pour les tests afin d'améliorer la performance
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
                 algorithm: auto
-                cost: 4  # La valeur la plus faible pour bcrypt
-                time_cost: 3  # La valeur la plus faible pour argon
-                memory_cost: 10 # La valeur la plus faible pour argon
+                cost: 4       # Valeur minimale pour bcrypt
+                time_cost: 3  # Valeur minimale pour argon
+                memory_cost: 10 # Valeur minimale pour argon
