--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,7 @@ security:
     # Règles d'accès aux différentes zones de l'application
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/register, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/api, roles: ROLE_USER }
 
