--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -5,10 +5,9 @@ nelmio_cors:
         allow_headers: ['Content-Type', 'Authorization', 'X-Requested-With']
         allow_methods: ['POST', 'GET', 'OPTIONS', 'PUT', 'DELETE']
         expose_headers: ['Link']
-        max_age: 3600
     paths:
         '^/api/':
             allow_origin: ['http://localhost:5173']  # Autoriser les requêtes venant de ce domaine
             allow_headers: ['Content-Type', 'Authorization']
             allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
-            max_age: 3600
+            origin_regex: true
